# axum-examples

./: Cargo.toml
api_test/: user.http
src/: main.rs  main_old.rs  main_working.rs
src/http/handlers/: dyn_handlers.rs  generic_handlers.rs  mod.rs
src/http/routes/: dyn_routes.rs  generic_routes.rs  mod.rs
src/state/: dyn_state.rs  generic_state.rs  mod.rs
src/utils/: give_macros.rs  mod.rs
tests/: send_sync_showcase.rs
